--- a/docs/环境与部署/软件版本.md
+++ b/docs/环境与部署/软件版本.md
@@ -2,41 +2,53 @@
 
 > 前端
 
-| 软件或技术 | 版本 |
-| ---------- | ---- |
-| Vue        | 2.x  |
-| Element    |      |
-|            |      |
+| 软件或技术 | 版本号 |
+| ---------- | ------ |
+| Vue        | 2.x    |
+| Element    |        |
+|            |        |
 
 
 
 > 后端
 
-| 软件或技术     | 版本              |
-| -------------- | ----------------- |
-| Java           | OpenJDK 1.8.0_275 |
-| SpringBoot     | 2.4.1             |
-| MySQL          | 5.7               |
-| Redis          |                   |
-| SpringSecurity |                   |
-| MyBatis        |                   |
-| ElasticSearch  | 7.9.3             |
-| Kibana         |                   |
+| 软件或技术      | 版本号            |
+| --------------- | ----------------- |
+| Java            | OpenJDK 1.8.0_275 |
+| SpringBoot      | 2.4.1             |
+| MySQL           | 5.7               |
+| Redis           | 6.0.9             |
+| Spring Security | 5.4.2             |
+| MyBatis         | 2.1.1             |
+| ElasticSearch   | 7.9.3             |
+| Kibana          | 7.9.3             |
+| Druid           | 1.1.20            |
+| slf4j-log4j12   | 1.8.0-alpha2      |
+| Hutool          | 5.5.7             |
+| validation      | 2.4.1             |
+| easyexcel       | 2.1.6             |
+| fastjson        | 1.2.73            |
+| aliyun-sdk-oss  | 3.4.2             |
+| junit           | 4.12              |
+| jasypt          | 3.0.3             |
+| swagger         | 2.9.2             |
+| knife4j         | 2.0.8             |
+| lombok          | 1.16.18           |
 
 
 
 > 运维端
 
-| 软件或技术 | 版本 |
-| ---------- | ---- |
-| Docker     |      |
-| Jenkins    |      |
-|            |      |
+| 软件或技术 | 版本号  |
+| ---------- | ------- |
+| Docker     | 20.10.2 |
+| Jenkins    | 2.287   |
+| nginx      | 1.16.1  |
 
 
 
 
 
-> 整体架构图
+## 整体架构图
 
 ![](./image/framework.png)
