--- a/docs/环境与部署/软件版本.md
+++ b/docs/环境与部署/软件版本.md
@@ -52,3 +52,6 @@
 ## 整体架构图
 
 ![](./image/framework.png)
+
+项目架构采用前后端分离的架构，分别部署了小程序端和web端，后台统一暴露接口，采用Spring Security进行鉴权，Spring Boot构建应用，持久层关系型数据库是MySQL，缓存用NoSQL的Redis，为了实现更好的搜索业务，我们还采用了Elasticsearch，同时Kibana做监控，应用基本都部署在Docker容器中，贴近云原生的理念。
+
