--- a/docs/环境与部署/软件版本.md
+++ b/docs/环境与部署/软件版本.md
@@ -2,11 +2,15 @@
 
 > 前端
 
-| 软件或技术 | 版本号 |
-| ---------- | ------ |
-| Vue        | 2.x    |
-| Element    |        |
-|            |        |
+| 软件或技术     | 版本号       |
+| -------------- | ------------ |
+| Vue            | 2.x          |
+| Element        | 2.14.1       |
+| ant-design-vue | 1.7.4        |
+| Vant           | 1.6.8        |
+| html2canvas    | 1.0.0.0-rc.4 |
+| jspdf          | 2.0.0        |
+| dom2image      | 2.6.0        |
 
 
 
